Corrección de persistencia en contacto + validaciones de formato en los campos de registro